--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -95,7 +95,7 @@
                     if(err.status === 400){
                         alert("잘못 입력된 값 입니다.")
                     }else if(err.status === 500){
-                        alert("서버에 문제가 발생했습니다.")
+                        alert("서버에 문제가 발생했습니다..")
                     }
                 }
             })
